@@ -1,3 +1,9 @@
+2008-02-27  Bastien Nocera  <hadess@hadess.net>
+
+	* src/backend/bacon-video-widget-xine.c (load_video_out_driver):
+	Work around broken multi-head support in the xine-lib backend
+	(Helps: #399220)
+
 ============ Version 2.21.95
 
 2008-02-26  Bastien Nocera  <hadess@hadess.net>
